--- a/androiddevelopmentinternship.html
+++ b/androiddevelopmentinternship.html
@@ -204,7 +204,7 @@
                                             <div class="upper-box">
                                                 <div class="upper-inner">
                                                     <div class="image">
-                                                        <img src="images/testimonials/kavii.jpeg"
+                                                        <img src="images/testimonials/Kavita.JPG"
                                                             alt="Kavita Randive" />
                                                     </div>
                                                     <h3>Kavita Randive</h3>
