--- a/datascienceinternship.html
+++ b/datascienceinternship.html
@@ -217,7 +217,7 @@
                                             <div class="upper-box">
                                                 <div class="upper-inner">
                                                     <div class="image">
-                                                        <img src="images/testimonials/kavii.jpeg"
+                                                        <img src="images/testimonials/Kavita.JPG"
                                                             alt="kavita_randive_img" />
                                                     </div>
                                                     <h3>Kavita Randive</h3>
