--- a/uidevelopment.html
+++ b/uidevelopment.html
@@ -242,7 +242,7 @@
                                             <div class="upper-box">
                                                 <div class="upper-inner">
                                                     <div class="image">
-                                                        <img src="images/testimonials/kavii.jpeg"
+                                                        <img src="images/testimonials/Kavita.JPG"
                                                             alt="Career Guidance and Placement Support for UI/UX Development Interns at Kharadi Technoartz Pune - Preparing for Future Opportunities" />
                                                     </div>
                                                     <h3>Kavita Randive</h3>
