--- a/angulardevelopmentinternship.html
+++ b/angulardevelopmentinternship.html
@@ -191,7 +191,7 @@
                                             <div class="upper-box">
                                                 <div class="upper-inner">
                                                     <div class="image">
-                                                        <img src="images/testimonials/kavii.jpeg" alt="Kavita Randive Angular Development Specialist" />
+                                                        <img src="images/testimonials/Kavita.JPG" alt="Kavita Randive Angular Development Specialist" />
                                                     </div>
                                                     <h3>Kavita Randive</h3>
                                                     <div class="location">Pune</div>
