--- a/aspnetdevelopmentinternship.html
+++ b/aspnetdevelopmentinternship.html
@@ -214,7 +214,7 @@
                                             <div class="upper-box">
                                                 <div class="upper-inner">
                                                     <div class="image">
-                                                        <img src="images/testimonials/kavii.jpeg"
+                                                        <img src="images/testimonials/Kavita.JPG"
                                                             alt="Kavita Randive - ASP.NET Developer from Pune, worked on real-time projects with a focus on API integration and UI optimization." />
                                                     </div>
                                                     <h3>Kavita Randive</h3>
