--- a/dataanalyticsinternship.html
+++ b/dataanalyticsinternship.html
@@ -221,7 +221,7 @@
                                             <div class="upper-box">
                                                 <div class="upper-inner">
                                                     <div class="image">
-                                                        <img src="images/testimonials/kavii.jpeg" alt="kavita_randive_img" />
+                                                        <img src="images/testimonials/Kavita.JPG" alt="kavita_randive_img" />
                                                     </div>
                                                     <h3>Kavita Randive</h3>
                                                     <div class="location">Pune</div>
