--- a/digitalmarketinginternship.html
+++ b/digitalmarketinginternship.html
@@ -195,7 +195,7 @@
                                             <div class="upper-box">
                                                 <div class="upper-inner">
                                                     <div class="image">
-                                                        <img src="images/testimonials/kavii.jpeg" alt="Kavita Randive" />
+                                                        <img src="images/testimonials/Kavita.JPG" alt="Kavita Randive" />
                                                     </div>
                                                     <h3>Kavita Randive</h3>
                                                     <div class="location">Pune</div>
