--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
         <!--Page Title-->
         <section class="page-title" style="background-image:url(images/background/pattern-4.png);">
             <div class="auto-container"><br>
-                <h1>About Our Company</h1>
+                <h1>About Our Technoartz</h1>
             </div>
             <!--Page Info-->
             <!-- <div class="page-info">
